--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,11 @@ dependencies = [
     "numpy>=2.3.5",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
+    "pillow>=12.0.0",
     "pydantic>=2.12.5",
     "pypdfium2>=5.1.0",
+    "python-toon>=0.1.3",
+    "pyyaml>=6.0.3",
     "scipy>=1.16.3",
     "xlwings>=0.33.16",
 ]
