--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ dependencies = [
     "pandas>=2.3.3",
     "pillow>=12.0.0",
     "pydantic>=2.12.5",
-    "pypdfium2>=5.1.0",
     "scipy>=1.16.3",
     "xlwings>=0.33.16",
 ]
@@ -31,6 +30,7 @@ dev = [
 [project.optional-dependencies]
 yaml = ["pyyaml>=6.0.3"]
 toon = ["python-toon>=0.1.3"]
+render = ["pypdfium2>=5.1.0"]
 
 [project.scripts]
 exstruct = "exstruct.cli.main:main"
