conceptページを追加

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ theme:
 nav:
   - Home: index.md
   - API Reference: api.md
+  - Concept / Why ExStruct?: concept.md
   - Read Me (EN): README.en.md
   - Read Me (JA): README.ja.md
 markdown_extensions:
