--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,9 @@ force-sort-within-sections = true
 [tool.ruff.mccabe]
 max-complexity = 12
 
+[tool.ruff.per-file-ignores]
+"tests/**/*.py" = ["N802", "N803", "N806"]
+
 
 [tool.mypy]
 packages = ["exstruct"]
