--- a/.github/workflows/ruff-check.yml
+++ b/.github/workflows/ruff-check.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: astral-sh/uv-action@v1
+      - uses: astral-sh/setup-uv@v4
 
       - name: Install dependencies
         run: uv sync --dev
