readmeの階層変更

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,8 +9,9 @@ nav:
   - Release Notes:
       - v0.2.61: release-notes/v0.2.61.md
       - v0.2.60: release-notes/v0.2.60.md
-  - Read Me (EN): README.en.md
-  - Read Me (JA): README.ja.md
+  - Read Me:
+      - Read Me (EN): README.en.md
+      - Read Me (JA): README.ja.md
   - License Guide: license-guide.md
 markdown_extensions:
   - admonition
