--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,23 @@ site_name: ExStruct
 site_url: https://harumiweb.github.io/exstruct/
 theme:
   name: material
+plugins:
+  - search
+  - mkdocstrings:
+      handlers:
+        python:
+          options:
+            docstring_style: google
+            show_source: false
+            separate_signature: true
+            members_order: source
+            show_root_heading: true
+            heading_level: 3
 nav:
   - Home: index.md
-  - API Reference: api.md
+  - API Reference:
+      - Overview: api.md
+      - Data Models (generated): generated/models.md
   - Concept / Why ExStruct?: concept.md
   - Release Notes:
       - v0.2.61: release-notes/v0.2.61.md
