--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,7 +15,10 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install mkdocs-material
+          pip install ".[yaml,toon,render]" mkdocs-material "mkdocstrings[python]"
+      - name: Generate model docs
+        run: |
+          python scripts/gen_model_docs.py
       - name: Build and deploy
         run: |
           mkdocs gh-deploy --force
