--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
   - CLI Guide: cli.md
   - Concept / Why ExStruct?: concept.md
   - Release Notes:
+      - v0.2.71: release-notes/v0.2.71.md
       - v0.2.61: release-notes/v0.2.61.md
       - v0.2.60: release-notes/v0.2.60.md
   - Read Me:
