--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dev = [
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
     "ruff>=0.14.8",
+    "taskipy>=1.14.1",
 ]
 
 [project.optional-dependencies]
@@ -117,3 +118,11 @@ markers = [
     "com: requires Excel COM (Windows + Excel)",
     "render: requires Excel COM and pypdfium2; set RUN_RENDER_SMOKE=1 to enable",
 ]
+
+[tool.taskipy.tasks]
+ruff = "ruff check ."
+format = "ruff check . --fix"
+mypy = "mypy src/exstruct --strict"
+pytest = "pytest -vv --cov"
+docs = "mkdocs serve"
+build-docs = "mkdocs build && python scripts/gen_json_schema.py && python scripts/gen_model_docs.py"
