--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -31,10 +31,16 @@ jobs:
       - name: Run tests (non-COM suite)
         if: runner.os != 'Windows'
         run: |
-          pytest -m "not com and not render" --maxfail=1 --disable-warnings -q
+          pytest -m "not com and not render" --maxfail=1 --disable-warnings -q --cov=exstruct --cov-report=xml
       - name: Run tests (full suite with skips)
         if: runner.os == 'Windows'
         env:
           RUN_RENDER_SMOKE: "0"  # enable with 1 when Excel+pypdfium2 are available
         run: |
-          pytest --maxfail=1 --disable-warnings -q
+          pytest --maxfail=1 --disable-warnings -q --cov=exstruct --cov-report=xml
+      - name: Upload coverage to Codecov
+        if: runner.os == 'Linux' && matrix.python-version == '3.12'
+        uses: codecov/codecov-action@v4
+        with:
+          files: coverage.xml
+          fail_ci_if_error: true
