--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
   - CLI Guide: cli.md
   - Concept / Why ExStruct?: concept.md
   - Release Notes:
+      - v0.3.0: release-notes/v0.3.0.md
       - v0.2.90: release-notes/v0.2.90.md
       - v0.2.80: release-notes/v0.2.80.md
       - v0.2.71: release-notes/v0.2.71.md
