--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,7 @@ nav:
   - CLI Guide: cli.md
   - Concept / Why ExStruct?: concept.md
   - Release Notes:
+      - v0.3.6: release-notes/v0.3.6.md
       - v0.3.5: release-notes/v0.3.5.md
       - v0.3.2: release-notes/v0.3.2.md
       - v0.3.1: release-notes/v0.3.1.md
