--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,13 @@ dev = [
 ]
 
 [project.optional-dependencies]
+all = [
+    "pyyaml>=6.0.3",
+    "python-toon>=0.1.3",
+    "pypdfium2>=5.1.0",
+    "Pillow>=12.0.0",
+    "mcp>=1.6.0,<2.0.0",
+]
 yaml = ["pyyaml>=6.0.3"]
 toon = ["python-toon>=0.1.3"]
 render = ["pypdfium2>=5.1.0", "Pillow>=12.0.0"]
