--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[yaml]
-          pip install pytest pytest-cov pytest-mock anyio
+          pip install -e .[yaml,mcp]
+          pip install pytest pytest-cov pytest-mock
       - name: Run tests (non-COM suite)
         if: runner.os != 'Windows'
         run: |
