feat: Initialize benchmark project with extraction and evaluation pipelines
- Add example environment configuration file for OpenAI API keys.
- Create .gitignore to exclude unnecessary files and directories.
- Implement Makefile for easy setup and execution of benchmark tasks.
- Write README.md with project overview, requirements, setup instructions, and output details.
- Define project metadata and dependencies in pyproject.toml.
- Set up directory structure and paths for data handling.
- Develop CLI for extracting data from Excel files and querying OpenAI's API.
- Implement evaluation functions to compare model responses against ground truth.
- Create utility functions for file handling and JSON normalization.
- Integrate OpenAI API client for text and image processing.
- Add support for various extraction methods including OpenPyXL, PDF, HTML, and image rendering.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v0.4.5
     hooks:
       - id: ruff
+        exclude: ^benchmark/
       - id: ruff-format
 
   - repo: https://github.com/pre-commit/mirrors-mypy
@@ -12,3 +13,4 @@ repos:
         additional_dependencies:
           - pydantic>=2.0.0
           - types-PyYAML
+        exclude: ^benchmark/
