--- a/benchmark/pyproject.toml
+++ b/benchmark/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "beautifulsoup4>=4.14.3",
+    "exstruct",
     "lxml>=6.0.2",
     "openai>=2.15.0",
     "openpyxl>=3.1.5",
@@ -14,6 +15,7 @@ dependencies = [
     "pymupdf>=1.26.7",
     "python-dotenv>=1.2.1",
     "rich>=14.2.0",
+    "tabulate>=0.9.0",
     "typer>=0.21.1",
 ]
 
@@ -24,3 +26,6 @@ exbench = "bench.cli:app"
 dev = [
     "ruff>=0.14.8",
 ]
+
+[tool.uv.sources]
+exstruct = { workspace = true }
