feat: Update manifest and truth files for improved data extraction; add certificate of employment JSON structure

--- a/benchmark/data/manifest.json
+++ b/benchmark/data/manifest.json
@@ -4,13 +4,10 @@
       "id": "ffr_425_01",
       "type": "application_form",
       "xlsx": "data/raw/ffr_425_01.xlsx",
-      "question": "このExcel申請書（Federal Financial Report / SF-425）から、次の情報を抽出し、JSONのみで返してください。\n\n抽出項目:\n1. item_1_agency: 「1. Federal Agency and Organizational Element」に記載されている提出先機関名\n2. item_6_report_type: チェックされている Report Type（Quarterly / Semi-Annual / Annual / Final のいずれか）\n3. item_7_accounting_basis: Basis of Accounting（Cash または Accrual）\n4. item_9_reporting_period_end: Reporting Period End Date（YYYY-MM-DD形式、未記入の場合は null）\n5. not_required_by_epa_items: \"Not Required by EPA\" と明示されている取引項目の一覧（項目名の配列）\n\n出力形式（厳守）:\n{\n  \"item_1_agency\": \"...\",\n  \"item_6_report_type\": \"...\",\n  \"item_7_accounting_basis\": \"...\",\n  \"item_9_reporting_period_end\": \"YYYY-MM-DD\" | null,\n  \"not_required_by_epa_items\": [\"...\", \"...\"]\n}",
+      "question": "このExcel帳票（Federal Financial Report / SF-425）について、次の情報を抽出し、JSONのみで返してください。\n\n(1) checkbox_groups: チェックボックスのグループ名と、その選択肢ラベル一覧を抽出してください（\"Report Type\" と \"Basis of Accounting\" の2グループのみ）。\n(2) not_required_by_epa_scope: 赤字の注記 \"Not Required by EPA\" がかかっているセクション名を返してください（例: \"Federal Cash\"）。\n(3) section_headers: 帳票上部の番号付きセクション見出し（1〜9）のうち、見出しテキストのみを配列で返してください（例: \"Federal Agency and Organizational Element to Which Report is Submitted\" など）。\n\n出力形式（厳守）:\n{\n  \"checkbox_groups\": {\n    \"Report Type\": [\"Quarterly\", \"Semi-Annual\", \"Annual\", \"Final\"],\n    \"Basis of Accounting\": [\"Cash\", \"Accrual\"]\n  },\n  \"not_required_by_epa_scope\": \"...\",\n  \"section_headers\": [\"...\", \"...\", \"...\"]\n}\n\n注意:\n- チェックボックスの記号（□など）は含めないでください。ラベル文字列のみを返してください。\n- section_headers は表示順（上から左→右）で返してください。\n- 余分な説明文やコードフェンスは付けず、JSONのみを返してください。",
       "truth": "data/truth/ffr_425_01.json",
       "sheet_scope": null,
-      "render": {
-        "dpi": 220,
-        "max_pages": 2
-      }
+      "render": { "dpi": 220, "max_pages": 2 }
     },
     {
       "id": "flowchart_01",
@@ -32,6 +29,18 @@
       "truth": "data/truth/gantt_01.json",
       "sheet_scope": null,
       "render": { "dpi": 200, "max_pages": 4 }
+    },
+    {
+      "id": "certificate_of_employment_01",
+      "type": "application_form",
+      "xlsx": "data/raw/certificate_of_employment_01.xlsx",
+      "question": "このExcel帳票（就労証明書）について、次の3点を抽出し、JSONのみで返してください。\n\n(1) checkbox_groups: 以下の3つのチェックボックス項目について、それぞれの選択肢ラベルを抽出してください。\n  - 業種\n  - 雇用の形態\n  - 雇用(予定)期間等（無期 / 有期）\n\n(2) numbered_sections: 帳票の「No.」列に対応する番号付き項目の見出し（1〜14）を、番号をキーとして抽出してください。\n\n(3) warning_text: 赤字で記載されている注意文を、そのまま1つの文字列として抽出してください。\n\n出力形式（厳守）:\n{\n  \"checkbox_groups\": {\n    \"業種\": [\"...\", \"...\"],\n    \"雇用の形態\": [\"...\", \"...\"],\n    \"雇用(予定)期間等\": [\"...\", \"...\"]\n  },\n  \"numbered_sections\": {\n    \"1\": \"...\",\n    \"2\": \"...\",\n    \"3\": \"...\"\n  },\n  \"warning_text\": \"...\"\n}\n\n注意:\n- チェックボックス記号（□など）は含めず、ラベル文字列のみを返してください。\n- numbered_sections は 1〜14 すべてを含めてください。\n- 余分な説明文やコードフェンスは付けず、JSONのみを返してください。",
+      "truth": "data/truth/certificate_of_employment_01.json",
+      "sheet_scope": null,
+      "render": {
+        "dpi": 220,
+        "max_pages": 1
+      }
     }
   ]
 }
